--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-tactile
+title: [Data-Centric Data Hub]
+description: [Documentation, API and sample of codes for the Data-Centric Data Hub]
