--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,46 @@
-theme: jekyll-theme-tactile
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
 title: [Data-Centric Data Hub]
-description: [Documentation and code samples]
+description: > # this means to ignore newlines until "baseurl:"
+  Documentation and code samples for the Data-Centric Design Hub <a href="http://materializecss.com">Materialize.css</a> for jekyll sites
+baseurl: "/docs"
+url: "https://datacentricdesign.github.io"
+permalink: /:year/:month/:day/:title
+repository: datacentricdesign/docs
+paginate: 5
+
+# MatJek specific configurations
+github_profile: "https://github.com/datacentricdesign"
+user: "Jacky Bourgeois"
+user_email: "jacky@datacentricdesign.org"
+contact_url: "https://datacentricdesign.org"
+google_tracking_id: ""
+google_site_verification: ""
+disqus_shortname: "jacky"
+
+# Build settings
+markdown: kramdown
+gems:
+  - jekyll-feed
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-sitemap
+exclude:
+  - Gemfile
+  - Gemfile.lock
+sass:
+  style: compressed
+future: true
