--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Data-Centric Data Hub
+title: Data-Centric Design Hub
 description: > # this means to ignore newlines until "baseurl:"
   Documentation and code samples for the Data-Centric Design Hub
 baseurl: "/docs"
